objects/LLC_BI__Adverse_Action__c.object
<CustomObject>
    <description>The Adverse Action Object stores information regarding the reasons for declined loans.</description>
    <fields>
        <fullName>AA_Status__c</fullName>
        <label>AA Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Loan Declined</fullName>
                </value>
                <value>
                    <fullName>Loan Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Review_Status__c</fullName>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Review</fullName>
                    <default>true</default>
                    <label>Pending Review</label>
                </value>
                <value>
                    <fullName>Review In Progress</fullName>
                </value>
                <value>
                    <fullName>Review Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Reviewed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Adverse_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Approved_by_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A Checkbox that indicates this loan was approved by credit prior to declination.</description>
        <label>Approved by Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Comments__c</fullName>
        <description>A text area for a user who is declining the loan to enter notes/ comments further explaining reasons for declination</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Credit_Provider__c</fullName>
        <description>Picklist of option available to the financial institution for the user to select where the credit information for the loan was obtained from.</description>
        <label>Credit Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Equifax</fullName>
                    <default>true</default>
                    <label>Equifax</label>
                </value>
                <value>
                    <fullName>Experian</fullName>
                </value>
                <value>
                    <fullName>TransUnion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Decline_Reason_1__c</fullName>
        <description>a Picklist of options for the primary reason the loan was declined</description>
        <label>Decline Reason 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Collection action or judgement</fullName>
                </value>
                <value>
                    <fullName>Delinquent past or present credit references with others</fullName>
                </value>
                <value>
                    <fullName>Excessive current obligations in relation to income</fullName>
                </value>
                <value>
                    <fullName>Foreclosure or repossession</fullName>
                </value>
                <value>
                    <fullName>Garnishment or attachment</fullName>
                </value>
                <value>
                    <fullName>Income insufficient for amount of credit requested</fullName>
                </value>
                <value>
                    <fullName>Insufficient number of credit references</fullName>
                </value>
                <value>
                    <fullName>Insufficient Length of employment</fullName>
                </value>
                <value>
                    <fullName>Too short period of residence</fullName>
                </value>
                <value>
                    <fullName>Limited credit experience</fullName>
                </value>
                <value>
                    <fullName>No credit report file</fullName>
                </value>
                <value>
                    <fullName>Number of recent inquiries on credit bureau report</fullName>
                </value>
                <value>
                    <fullName>Poor credit performance with us</fullName>
                </value>
                <value>
                    <fullName>Temporary or irregular employment</fullName>
                </value>
                <value>
                    <fullName>Temporary residence</fullName>
                </value>
                <value>
                    <fullName>Unable to verify credit references</fullName>
                </value>
                <value>
                    <fullName>Unable to verify employment</fullName>
                </value>
                <value>
                    <fullName>Unable to verify income</fullName>
                </value>
                <value>
                    <fullName>Unable to verify residence</fullName>
                </value>
                <value>
                    <fullName>Unacceptable type of credit references provided</fullName>
                </value>
                <value>
                    <fullName>Value or type of collateral not sufficient</fullName>
                </value>
                <value>
                    <fullName>Credit not granted to any applicant on terms requested</fullName>
                </value>
                <value>
                    <fullName>Incomplete application</fullName>
                </value>
                <value>
                    <fullName>Lack of management experience in the industry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Decline_Reason_2__c</fullName>
        <description>A Picklist of options to select the secondary reason the loan was declined</description>
        <label>Decline Reason 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Collection action or judgement</fullName>
                </value>
                <value>
                    <fullName>Delinquent past or present credit references with others</fullName>
                </value>
                <value>
                    <fullName>Excessive current obligations in relation to income</fullName>
                </value>
                <value>
                    <fullName>Foreclosure or repossession</fullName>
                </value>
                <value>
                    <fullName>Garnishment or attachment</fullName>
                </value>
                <value>
                    <fullName>Income insufficient for amount of credit requested</fullName>
                </value>
                <value>
                    <fullName>Insufficient number of credit references</fullName>
                </value>
                <value>
                    <fullName>Insufficient Length of employment</fullName>
                </value>
                <value>
                    <fullName>Too short period of residence</fullName>
                </value>
                <value>
                    <fullName>Limited credit experience</fullName>
                </value>
                <value>
                    <fullName>No credit report file</fullName>
                </value>
                <value>
                    <fullName>Number of recent inquiries on credit bureau report</fullName>
                </value>
                <value>
                    <fullName>Poor credit performance with us</fullName>
                </value>
                <value>
                    <fullName>Temporary or irregular employment</fullName>
                </value>
                <value>
                    <fullName>Temporary residence</fullName>
                </value>
                <value>
                    <fullName>Unable to verify credit references</fullName>
                </value>
                <value>
                    <fullName>Unable to verify employment</fullName>
                </value>
                <value>
                    <fullName>Unable to verify income</fullName>
                </value>
                <value>
                    <fullName>Unable to verify residence</fullName>
                </value>
                <value>
                    <fullName>Unacceptable type of credit references provided</fullName>
                </value>
                <value>
                    <fullName>Value or type of collateral not sufficient</fullName>
                </value>
                <value>
                    <fullName>Credit not granted to any applicant on terms requested</fullName>
                </value>
                <value>
                    <fullName>Incomplete application</fullName>
                </value>
                <value>
                    <fullName>Lack of management experience in the industry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Decline_Reason_3__c</fullName>
        <description>A Picklist of options to select an additional (third) reason the loan was declined</description>
        <label>Decline Reason 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Collection action or judgement</fullName>
                </value>
                <value>
                    <fullName>Delinquent past or present credit references with others</fullName>
                </value>
                <value>
                    <fullName>Excessive current obligations in relation to income</fullName>
                </value>
                <value>
                    <fullName>Foreclosure or repossession</fullName>
                </value>
                <value>
                    <fullName>Garnishment or attachment</fullName>
                </value>
                <value>
                    <fullName>Income insufficient for amount of credit requested</fullName>
                </value>
                <value>
                    <fullName>Insufficient number of credit references</fullName>
                </value>
                <value>
                    <fullName>Insufficient Length of employment</fullName>
                </value>
                <value>
                    <fullName>Too short period of residence</fullName>
                </value>
                <value>
                    <fullName>Limited credit experience</fullName>
                </value>
                <value>
                    <fullName>No credit report file</fullName>
                </value>
                <value>
                    <fullName>Number of recent inquiries on credit bureau report</fullName>
                </value>
                <value>
                    <fullName>Poor credit performance with us</fullName>
                </value>
                <value>
                    <fullName>Temporary or irregular employment</fullName>
                </value>
                <value>
                    <fullName>Temporary residence</fullName>
                </value>
                <value>
                    <fullName>Unable to verify credit references</fullName>
                </value>
                <value>
                    <fullName>Unable to verify employment</fullName>
                </value>
                <value>
                    <fullName>Unable to verify income</fullName>
                </value>
                <value>
                    <fullName>Unable to verify residence</fullName>
                </value>
                <value>
                    <fullName>Unacceptable type of credit references provided</fullName>
                </value>
                <value>
                    <fullName>Value or type of collateral not sufficient</fullName>
                </value>
                <value>
                    <fullName>Credit not granted to any applicant on terms requested</fullName>
                </value>
                <value>
                    <fullName>Incomplete application</fullName>
                </value>
                <value>
                    <fullName>Lack of management experience in the industry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Flag__c</fullName>
        <description>When set, this triggers apex that updates the stage of the loan.
flag: 1 = update</description>
        <label>Loan Flag</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <description>Master- Detail associating the Adverse Action with the appropriate loan.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Adverse Actions</relationshipLabel>
        <relationshipName>Adverse_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Withdraw_Reason__c</fullName>
        <description>This field is to specify a reason why the loan is being withdrawn.</description>
        <label>Withdraw Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer&apos;s Statement to Withdraw the Application</fullName>
                </value>
                <value>
                    <fullName>Notice of Incomplete Application Sent but Requested Information not Received</fullName>
                </value>
                <value>
                    <fullName>Application Approved but Not Accepted</fullName>
                </value>
                <value>
                    <fullName>Application Approved, No Response from Customer Within 30 Days</fullName>
                </value>
                <value>
                    <fullName>Renewal started but not needed</fullName>
                </value>
                <value>
                    <fullName>Duplicate loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Adverse Action</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>AA_Status__c</columns>
        <columns>LLC_BI__Loan__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CF_Review_Status__c</columns>
        <columns>LLC_BI__Comments__c</columns>
        <columns>LLC_BI__Withdraw_Reason__c</columns>
        <columns>LLC_BI__Decline_Reason_1__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LV_Adverse_Action_Review_Queue</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>LLC_BI__Loan__c</columns>
        <columns>CF_Review_Status__c</columns>
        <columns>CF_Reviewed_By__c</columns>
        <columns>LLC_BI__Withdraw_Reason__c</columns>
        <columns>LLC_BI__Decline_Reason_1__c</columns>
        <columns>LLC_BI__Decline_Reason_2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CF_Review_Status__c</field>
            <operation>equals</operation>
            <value>Pending Review</value>
        </filters>
        <filters>
            <field>CF_Review_Status__c</field>
            <operation>equals</operation>
            <value>Review In Progress</value>
        </filters>
        <label>Adverse Action Review Queue</label>
    </listViews>
    <nameField>
        <displayFormat>AA-{0000000000}</displayFormat>
        <label>Adverse Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adverse Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AA_VR_Decline_Reason_Rule</fullName>
        <active>true</active>
        <description>You must select at least (2) reasons for loan declination when declining a loan</description>
        <errorConditionFormula>AND( 
$User.No_Validation__c = False,
OR( 

AND( 
NOT(ISPICKVAL(LLC_BI__Decline_Reason_1__c , &apos;None&apos;)), 
ISPICKVAL(LLC_BI__Decline_Reason_2__c , &apos;None&apos;), 
ISPICKVAL(LLC_BI__Decline_Reason_3__c , &apos;None&apos;), 
ISPICKVAL(LLC_BI__Decline_Reason_4__c , &apos;None&apos;),
ISNULL(LLC_BI__Comments__c)), 

AND( 
NOT(ISPICKVAL(LLC_BI__Decline_Reason_2__c , &apos;None&apos;)), 
ISPICKVAL(LLC_BI__Decline_Reason_1__c , &apos;None&apos;), 
ISPICKVAL(LLC_BI__Decline_Reason_3__c , &apos;None&apos;), 
ISPICKVAL(LLC_BI__Decline_Reason_4__c , &apos;None&apos;),
ISNULL(LLC_BI__Comments__c)), 

AND( 
NOT(ISPICKVAL(LLC_BI__Decline_Reason_3__c , &apos;None&apos;)), 
ISPICKVAL(LLC_BI__Decline_Reason_1__c , &apos;None&apos;), 
ISPICKVAL(LLC_BI__Decline_Reason_2__c , &apos;None&apos;), 
ISPICKVAL(LLC_BI__Decline_Reason_4__c , &apos;None&apos;),
ISNULL(LLC_BI__Comments__c)), 

AND( 
NOT(ISPICKVAL(LLC_BI__Decline_Reason_4__c , &apos;None&apos;)), 
ISPICKVAL(LLC_BI__Decline_Reason_1__c , &apos;None&apos;), 
ISPICKVAL(LLC_BI__Decline_Reason_2__c , &apos;None&apos;), 
ISPICKVAL(LLC_BI__Decline_Reason_3__c , &apos;None&apos;),
ISNULL(LLC_BI__Comments__c))))</errorConditionFormula>
        <errorMessage>You must select at least (2) reasons OR 1 reason and comments for loan declination when declining a loan</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AA_VR_HMDA_Rule</fullName>
        <active>true</active>
        <description>Complete the HMDA questionnaire before initiating adverse action</description>
        <errorConditionFormula>AND(
LLC_BI__Loan__r.LLC_BI__HMDA_Reportable__c = false,
LLC_BI__Loan__r.CF_HMDA_Not_Reportable__c = false,
$User.No_Validation__c = False)</errorConditionFormula>
        <errorMessage>Please go back and complete the HMDA questionnaire before initiating adverse action.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AA_VR_Withdraw_Reason_Rule</fullName>
        <active>true</active>
        <description>You must select the reason for loan declination when withdrawing a loan</description>
        <errorConditionFormula>AND(
$User.No_Validation__c = False,
ISPICKVAL( LLC_BI__Withdraw_Reason__c , &apos;None&apos;)
)</errorConditionFormula>
        <errorMessage>You must select the reason for loan declination when withdrawing a loan - AA02</errorMessage>
    </validationRules>
</CustomObject>